--- a/my-profile-v2/src/skill/style/skill.style.css
+++ b/my-profile-v2/src/skill/style/skill.style.css
@@ -1,3 +1,12 @@
+#skills{
+  margin-top: 25px;
+  padding-top: 1.5em;
+}
+
+.skills{
+  margin-bottom: 100px;
+}
+
 .line-class {
 	border:1px solid #e73131;
 	width:15%;
@@ -35,10 +44,6 @@ img,
 }
 
 @import url('https://fonts.googleapis.com/css?family=Oswald|Poppins');
-body {
-    /* font-family: 'Oswald', sans-serif; */
-    /* font-family: 'Poppins', sans-serif; */
-}
 
 .card-box {
     /* background: #FAFAFA; */
