--- a/my-profile-v3/src/shared/styles/packages/dashboard.module.css
+++ b/my-profile-v3/src/shared/styles/packages/dashboard.module.css
@@ -1,5 +1,6 @@
 .section {
   @apply lg:h-screen h-full bg-dark-950 lg:snap-start snap-always scroll-smooth;
+  /* scroll-snap-align: start; */
 }
 
 .home {
