--- a/my-profile-v3/src/shared/styles/globals.css
+++ b/my-profile-v3/src/shared/styles/globals.css
@@ -12,7 +12,7 @@ body {
 }
 
 .scroll-container {
-  height: 100vh;
-  overflow-y: scroll;
   scroll-snap-type: y mandatory;
+  overflow-y: auto;
+  height: 100vh;
 }
