fix: mobile view

--- a/my-profile-v3/src/shared/styles/globals.css
+++ b/my-profile-v3/src/shared/styles/globals.css
@@ -4,7 +4,7 @@
 
 html,
 body {
-  @apply font-regular overflow-x-hidden;
+  @apply font-regular overflow-x-hidden bg-dark-default;
 
   user-select: none;
   -webkit-user-select: none; /* Safari */
