--- a/my-profile-v3/src/shared/styles/packages/dashboard.module.css
+++ b/my-profile-v3/src/shared/styles/packages/dashboard.module.css
@@ -8,10 +8,11 @@
 }
 
 .about {
-  @apply w-screen relative md:px-24 px-4 lg:bg-[radial-gradient(circle_at_50%_-20%,_rgba(249,115,22,1)_0%,_transparent_36%)] md:bg-[radial-gradient(circle_at_50%_-22%,_rgba(249,115,22,1)_0%,_transparent_31%)] bg-[radial-gradient(circle_at_50%_-20%,_rgba(249,115,22,1)_-5%,_transparent_25%)] text-white z-0;
+  @apply w-screen relative md:px-24 px-4 lg:bg-[radial-gradient(circle_at_50%_-20%,_rgba(249,115,22,1)_0%,_transparent_36%)] md:bg-[radial-gradient(circle_at_50%_-22%,_rgba(249,115,22,1)_0%,_transparent_31%)] text-white z-0 md:pt-0 pt-24;
 }
 
 .experience {
+  @apply md:pt-0 pt-24;
   background: linear-gradient(180deg, #262626, #0d2d44 100%);
 }
 
